--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -10,6 +10,10 @@ android {
         versionCode VERSION_CODE as int
         versionName VERSION_NAME
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
